--- a/lecture/CS117/CMakeLists.txt
+++ b/lecture/CS117/CMakeLists.txt
@@ -4,5 +4,6 @@ project(CS117)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 
-add_executable(CS117  ch3.cpp)
+add_executable(Chapter3  ch3.cpp)
 add_executable(Chapter3_1 ch3_1.cpp)
+add_executable(Chapter4 ch4_5.cpp)
