--- a/lecture/CS117/CMakeLists.txt
+++ b/lecture/CS117/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(Chapter3  ch3.cpp)
 add_executable(Chapter3_1 ch3_1.cpp)
 add_executable(Chapter4 ch4_5.cpp)
 add_executable(Chapter5 ch5.cpp)
+add_executable(character character.cpp)
