Talker code for super complex hello world

--- a/lecture/CS117/CMakeLists.txt
+++ b/lecture/CS117/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(Chapter3_1 ch3_1.cpp)
 add_executable(Chapter4 ch4_5.cpp)
 add_executable(Chapter5 ch5.cpp)
 add_executable(Grades Grades.cpp)
+add_executable(Talker Talker.cpp)
